--- a/src/Components/CSS/modali.scss
+++ b/src/Components/CSS/modali.scss
@@ -21,7 +21,7 @@
   p {
     color: #7a7a7a;
     font-weight: 500;
-    font-size: 1.1rem;
+    font-size: 1.4rem;
   }
 
   input {
@@ -32,6 +32,7 @@
     color: #969696;
     margin-top: 2%;
     padding: 1% 0rem;
+    font-size: 1.2rem;
   }
 
   ::placeholder {
